--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,12 @@
 {% extends 'layout.html' %}
 
+
+
 {% block content %}
 	<h1>This is the about page</h1>
 {% endblock content %}
+
+
 
 {% block adress %}
 	<address>
@@ -17,3 +21,21 @@
 	</address>
 
 {% endblock adress %}
+
+
+
+{% block button %}
+	<button class="button" type="button">Click me</button>
+{% endblock button %}
+
+
+
+{% block myPhoto %}
+	<img class="myPhoto" src="{{ url_for('static', filename='images/IMG_8087.jpeg') }}" alt="photo with me">
+{% endblock myPhoto %}
+
+
+
+{% block javaScript%}
+	<script src="{{ url_for('static', filename='scripts/aboutPage.js') }}" type="text/javascript"></script>
+{% endblock javaScript %}
