--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,21 @@
 {% extends 'layout.html' %}
 
+
+
 {% block content %}
-	<h1>Welcome to my website</h1>
+	<h1 class="indexWelcome">Welcome to my website</h1>
 	{% for post in posts %}
 		<h1> {{ post.title }} </h1>
 		<p> on {{ post.datePosted }} by {{ post.author }}</p>
 		<p> {{ post.content }}</p>
 	{% endfor %}
 {% endblock content %}
+
+
+
+{% block javaScript%}
+	<script src="{{ url_for('static', filename='scripts/index.js') }}" type="text/javascript"></script>
+{% endblock javaScript %}
+
+
+
