--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,16 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    
+    <!-- link to index.html css stylesheet -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}">
+
+	<!-- link to about.html css stylesheet -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/aboutPage.css') }}">
+
+	<!-- fix favicon error -->
+	<link rel="shortcut icon" href="#">
+	
 	{% if title %}
 		<title>Flask - {{ title }}</title>
 	{% else %}
@@ -15,16 +24,24 @@
 	{% endif %}
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		{% block content %} {% endblock content %}
+
+		{% block button %} {% endblock button %}
+
+		{% block myPhoto %} {% endblock myPhoto %}
+
+		{% block adress %} {% endblock adress %}
 	</div>
 
 
-	{% block adress %} {% endblock adress %}
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    {% block javaScript%} {% endblock javaScript %}
+
 </body>
 </html>
