--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,11 @@
 {% extends 'layout.html' %}
 
 
+{% block css %} 
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about.css') }}">
+{% endblock css %}
+
+
 
 {% block content %}
 	<h1>This is the about page</h1>
@@ -37,5 +42,5 @@
 
 
 {% block javaScript%}
-	<script src="{{ url_for('static', filename='scripts/aboutPage.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='scripts/about.js') }}" type="text/javascript"></script>
 {% endblock javaScript %}
