--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
-
+{% block css %}
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/home.css') }}">
+{% endblock css%}
 
 {% block content %}
 	<h1 class="indexWelcome">Welcome to my website</h1>
@@ -14,7 +16,7 @@
 
 
 {% block javaScript%}
-	<script src="{{ url_for('static', filename='scripts/index.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='scripts/home.js') }}" type="text/javascript"></script>
 {% endblock javaScript %}
 
 
