--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,11 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
-    <!-- link to index.html css stylesheet -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}">
-
-	<!-- link to about.html css stylesheet -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/aboutPage.css') }}">
+    {% block css %} {% endblock css %}
 
 	<!-- fix favicon error -->
 	<link rel="shortcut icon" href="#">
