--- a/templates/about.html
+++ b/templates/about.html
@@ -1,46 +1,24 @@
 {% extends 'layout.html' %}
 
-
 {% block css %} 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about.css') }}">
 {% endblock css %}
 
 
 
+{% block title %}
+	About 
+{% endblock title %}
+
+
+
 {% block content %}
-	<h1>This is the about page</h1>
+	<h1>About us...</h1>
+
+	{% for post in posts %}
+		<h1> {{ post.title }} </h1>
+		<p> {{ post.content }} </p>
+		<small> on {{ post.datePosted }} by {{ post.author }} </small>
+	{% endfor %}
+
 {% endblock content %}
-
-
-
-{% block adress %}
-	<address>
-		<strong>Facebook, Inc.</strong><br>
-		city, street, number<br>
-		<abbr title="Phone">Ph: </abbr> phone number
-	</address>
-
-	<address>
-		<strong>Full name</strong><br>
-		<a href="mailto:#">abc@example.com</a>
-	</address>
-
-{% endblock adress %}
-
-
-
-{% block button %}
-	<button class="button" type="button">Click me</button>
-{% endblock button %}
-
-
-
-{% block myPhoto %}
-	<img class="myPhoto" src="{{ url_for('static', filename='images/IMG_8087.jpeg') }}" alt="photo with me">
-{% endblock myPhoto %}
-
-
-
-{% block javaScript%}
-	<script src="{{ url_for('static', filename='scripts/about.js') }}" type="text/javascript"></script>
-{% endblock javaScript %}
