--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,13 @@
 {% extends 'layout.html' %}
 
-{% block css %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/home.css') }}">
-{% endblock css%}
+
+
+{% block title %} 
+	Home
+{% endblock title %}
+
+
 
 {% block content %}
-	<h1 class="indexWelcome">Welcome to my website</h1>
-	{% for post in posts %}
-		<h1> {{ post.title }} </h1>
-		<p> on {{ post.datePosted }} by {{ post.author }}</p>
-		<p> {{ post.content }}</p>
-	{% endfor %}
+	<h1>Home Page</h1>
 {% endblock content %}
-
-
-
-{% block javaScript%}
-	<script src="{{ url_for('static', filename='scripts/home.js') }}" type="text/javascript"></script>
-{% endblock javaScript %}
-
-
-
