--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	 <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+	<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- Fix favicon error-->
+    <link rel="shortcut icon" href="#">
+
     {% block css %} {% endblock css %}
 
-	<!-- fix favicon error -->
-	<link rel="shortcut icon" href="#">
-	
-	{% if title %}
-		<title>Flask - {{ title }}</title>
-	{% else %}
-		<title>Flask Blog</title>
-	{% endif %}
+	<title>{% block title %} GENERIC TITLE {% endblock title %}</title>
 </head>
-<body>
-	<div class="container">
-		{% block content %} {% endblock content %}
+<body style="background-color: #f2f2f2">
+	<!-- bootstrap navbar -->
+	<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+ 		<div class="container-fluid">
+	    	<a class="navbar-brand" href="{{ url_for('homePage') }}">Sebi Ghiara</a>
+	    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+		    	<span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+		     	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		       		<li class="nav-item">
+		          		<a class="nav-link" aria-current="page" href="{{ url_for('homePage') }}">Home</a>
+		        	</li>
+		        	<li class="nav-item">
+		         		<a class="nav-link" href="{{ url_for('aboutPage') }}">About</a>
+		        	</li>
+		        	<li class="nav-item">
+		         		<a class="nav-link" href="{{ url_for('subscribePage') }}">Subscribe</a>
+		        	</li>
+		      	</ul>
+	    	</div>
+	  	</div>
+	</nav>
+	<br>
 
-		{% block button %} {% endblock button %}
+	{% block content %} {% endblock content %}
 
-		{% block myPhoto %} {% endblock myPhoto %}
+	<!-- Optional JavaScript; choose one of the two! -->
 
-		{% block adress %} {% endblock adress %}
-	</div>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-
-	<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-    {% block javaScript%} {% endblock javaScript %}
-
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    -->
 </body>
 </html>
