--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,14 +8,16 @@
 	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+    <!-- css link -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+
     <!-- Fix favicon error-->
     <link rel="shortcut icon" href="#">
 
-    {% block css %} {% endblock css %}
 
 	<title>{% block title %} GENERIC TITLE {% endblock title %}</title>
 </head>
-<body style="background-color: #f2f2f2">
+<body>
 	<!-- bootstrap navbar -->
 	<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
  		<div class="container-fluid">
@@ -34,13 +36,18 @@
 		        	<li class="nav-item">
 		         		<a class="nav-link" href="{{ url_for('subscribePage') }}">Subscribe</a>
 		        	</li>
+		        	<li class="nav-item">
+		         		<a class="nav-link" href="{{ url_for('friendsPage') }}">Friends</a>
+		        	</li>
 		      	</ul>
 	    	</div>
 	  	</div>
 	</nav>
 	<br>
 
-	{% block content %} {% endblock content %}
+	<div class="container">
+		{% block content %} {% endblock content %}
+	</div>
 
 	<!-- Optional JavaScript; choose one of the two! -->
 
